--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.2.x"
-  }
-}
+    "angular": "1.2.x",
+    "jquery": "2.x"
+  }}
